--- a/notesHTML.html
+++ b/notesHTML.html
@@ -114,12 +114,12 @@
 				</a>
 			</div>
 			<ul id="task-list" class="list-group">
-				<li class="list-group-item list-group-item-secondary">
+				<!-- <li class="list-group-item list-group-item-secondary">
 					Task Item
 					<a href="#" class="delete-item float-right">
 						<i class="fas fa-times"></i>
 					</a>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</div>
