adding daily notes
adding daily notes

--- a/notesHTML.html
+++ b/notesHTML.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<!-- NOTES OF LECTURES FROM 150 TO 196 -->
+<!-- * NOTES OF LECTURES FROM 150 TO 196 -->
 
 
 <!-- <body style="background-color: #263238; color: azure;">
@@ -79,9 +79,12 @@
 	</div> -->
 
 
-<!-- NEW NOTES (AFTER 196. LECTURE) -->
+<!-- * 150 - 196 LECTURES | END -->
+
 
 <body>
+
+	<!-- * 196 - 236 LECTURES --*>
 
 	<div class="container p-3">
 		<h1 class="app-title" id="header">
@@ -119,10 +122,30 @@
 					<a href="#" class="delete-item float-right">
 						<i class="fas fa-times"></i>
 					</a>
-				</li> -->
+				</li> 
 			</ul>
 		</div>
-	</div>
+	</div> -->
+
+	<!-- * 196 - 236 LECTURES | END -->
+
+
+	<!-- * 236. LECTURES -->
+
+	<form action="">
+		AD: <input type="text" id="name"><br><br>
+		YAŞ: <input type="text" id="age"><br><br>
+		<input type="submit" id="mybtn"><br><br>
+		<div id="errors"></div>
+	</form>
+
+
+
+
+	<!-- * 236. LECTURES -->
+
+	
+
 
 
 	<script src="notesJS.js" async defer></script>
