adding daily notes
adding daily notes

--- a/notesHTML.html
+++ b/notesHTML.html
@@ -139,6 +139,15 @@
 		<div id="errors"></div>
 	</form>
 
+	<h1 class="h1">H1</h1>
+
+	<div>Div</div>
+	<div>Div</div>
+	<div>Div</div>
+	<div>Div</div>
+	<div>Div</div>
+
+
 
 
 
